chore(Dropdown) Remove border from active DropdownOption to prevent flickering
minimal change, no ticket

--- a/client/src/modules/components/Dropdown/DropdownOption.scss
+++ b/client/src/modules/components/Dropdown/DropdownOption.scss
@@ -13,6 +13,10 @@ button.DropdownOption {
   width: 100%;
   text-align: left;
   border-radius: 0;
+  
+  &.is-active {
+    border: none;
+  }
 
   &:hover {
     background-color: #008fe6; /* #00a8ff -> darken 10% */
